fix(blog): welcome post has been fixed

--- a/blog/2025-12-05-welcome.md
+++ b/blog/2025-12-05-welcome.md
@@ -2,7 +2,7 @@
 slug: welcome-to-aliznet
 title: به پروژه AlizNet خوش آمدید!
 authors: [aliz]
-tags: [Computer]
+tags: [computer]
 ---
 
 # 👋 خوش‌آمدید به پروژه مستندات فارسی AlizNet
