fix(docs): add # for empty link

--- a/docs/cs-core/computer-fundamentals/04_computer-hardware.mdx
+++ b/docs/cs-core/computer-fundamentals/04_computer-hardware.mdx
@@ -26,11 +26,11 @@ import slideImages from "./images/04_computer-hardware";
 ## سخت‌افزار کامپیوتر چیست؟
 
 سخت‌افزار کامپیوتر شامل دستگاه‌ها و قطعات فیزیکی کامپیوتر است که می‌توان آن‌ها را دید و لمس کرد.
-برای مثال: **[نمایشگر (Monitor)]()**، **[واحد پردازش مرکزی (Central Processing Unit – CPU)]()**، **[ماوس (Mouse)]()**، **[جوی‌استیک (Joystick)]()** و غیره.
+برای مثال: **[نمایشگر (Monitor)](#)**، **[واحد پردازش مرکزی (Central Processing Unit – CPU)](#)**، **[ماوس (Mouse)](#)**، **[جوی‌استیک (Joystick)](#)** و غیره.
 
-با استفاده از این دستگاه‌ها، می‌توان عملیات مختلف کامپیوتر مانند [**ورودی (Input)** و **خروجی (Output)**]() را کنترل کرد.
+با استفاده از این دستگاه‌ها، می‌توان عملیات مختلف کامپیوتر مانند [**ورودی (Input)** و **خروجی (Output)**](#) را کنترل کرد.
 
-> مطالعه بیشتر: [دستگاه‌های جانبی (Peripheral Device)]()
+> مطالعه بیشتر: [دستگاه‌های جانبی (Peripheral Device)](#)
 
 ---
 
@@ -46,7 +46,7 @@ import slideImages from "./images/04_computer-hardware";
 
 ### دستگاه‌های ورودی (Input Devices)
 
-[دستگاه‌های ورودی]() به کاربران اجازه می‌دهند با وارد کردن داده یا فرمان با کامپیوتر تعامل داشته باشند. این دستگاه‌ها ورودی را به قالبی تبدیل می‌کنند که کامپیوتر قادر به پردازش آن باشد.
+[دستگاه‌های ورودی](#) به کاربران اجازه می‌دهند با وارد کردن داده یا فرمان با کامپیوتر تعامل داشته باشند. این دستگاه‌ها ورودی را به قالبی تبدیل می‌کنند که کامپیوتر قادر به پردازش آن باشد.
 
 در ادامه برخی از دستگاه‌های ورودی توضیح داده می‌شوند:
 
@@ -80,10 +80,10 @@ import slideImages from "./images/04_computer-hardware";
 دستگاه‌های خروجی نتایج پردازش‌های کامپیوتر را به شکلی قابل فهم برای انسان نمایش می‌دهند.
 
 - **نمایشگر (Monitor):**
-اصلی‌ترین دستگاه خروجی که به آن **[واحد نمایش تصویری (Visual Display Unit – VDU)]()** نیز گفته می‌شود و شبیه صفحه تلویزیون است. نمایشگر برای نمایش متن، ویدیو، تصویر و اطلاعات دیگر استفاده می‌شود.
+اصلی‌ترین دستگاه خروجی که به آن **[واحد نمایش تصویری (Visual Display Unit – VDU)](#)** نیز گفته می‌شود و شبیه صفحه تلویزیون است. نمایشگر برای نمایش متن، ویدیو، تصویر و اطلاعات دیگر استفاده می‌شود.
 
-- **()[چاپگر (Printer)]:**
-داده‌ها را به‌صورت متن یا تصویر روی کاغذ چاپ می‌کند. چاپگرها می‌توانند رنگی یا سیاه‌وسفید باشند. انواع مختلفی از چاپگر وجود دارد، مانند [چاپگر لیزری، ماتریسی]() و جوهرافشان.
+- **[چاپگر (Printer)](#):**
+داده‌ها را به‌صورت متن یا تصویر روی کاغذ چاپ می‌کند. چاپگرها می‌توانند رنگی یا سیاه‌وسفید باشند. انواع مختلفی از چاپگر وجود دارد، مانند [چاپگر لیزری، ماتریسی](#) و جوهرافشان.
 
 - **پلاتر (Plotter):**
 مشابه چاپگر است اما در ابعاد بزرگ‌تر. پلاتر برای تولید نقشه‌های بزرگ، نقشه‌های معماری و طراحی‌های باکیفیت استفاده می‌شود.
@@ -96,13 +96,13 @@ import slideImages from "./images/04_computer-hardware";
 
 برخی دستگاه‌ها برای ذخیره داده استفاده می‌شوند و به آن‌ها **حافظه‌های جانبی (Secondary Storage Devices)** گفته می‌شود.
 
-#### 1. [دیسک فشرده (Compact Disc – CD)]()
+#### 1. [دیسک فشرده (Compact Disc – CD)](#)
 
 دیسک فشرده دایره‌ای شکل است و از شیشه نازک پوشش‌دار و پلاستیک پلی‌کربنات ساخته شده است. ظرفیت ذخیره‌سازی آن بین ۶۰۰ تا ۷۰۰ مگابایت است. قطر استاندارد آن ۱۲ سانتی‌متر، قطر سوراخ مرکزی حدود ۱.۵ سانتی‌متر و ضخامت آن ۱.۲ میلی‌متر است.
 
 انواع CD عبارت‌اند از:
 
-- **[CD-ROM (Read Only Memory)]():**
+- **[CD-ROM (Read Only Memory)](#):**
 محتوای آن توسط کاربر قابل پاک یا ویرایش نیست و فقط ناشر به داده‌های درج‌شده روی آن دسترسی دارد. برای آلبوم‌های موسیقی و بسته‌های نرم‌افزاری استفاده می‌شود.
 
 - **CD-R (Recordable):**
@@ -111,7 +111,7 @@ import slideImages from "./images/04_computer-hardware";
 - **CD-RW (Rewritable):**
 امکان پاک‌کردن و بازنویسی چندباره داده‌ها را فراهم می‌کند.
 
-#### 2. [دی‌وی‌دی (Digital Video / Versatile Disc – DVD)]()
+#### 2. [دی‌وی‌دی (Digital Video / Versatile Disc – DVD)](#)
 
 DVD مشابه CD است اما امکانات و ظرفیت بیشتری دارد. DVD در قالب تک‌لایه و دولایه عرضه می‌شود.
 ظرفیت‌ها به شرح زیر است:
@@ -123,19 +123,19 @@ DVD مشابه CD است اما امکانات و ظرفیت بیشتری دار
 
 انواع DVD عبارت‌اند از:
 
-- **[DVD-ROM:]()** فقط خواندنی
-- **[DVD-R / DVD+R:]()** یک‌بار قابل ضبط
+- **[DVD-ROM:](#)** فقط خواندنی
+- **[DVD-R / DVD+R:](#)** یک‌بار قابل ضبط
 - **DVD-RW / DVD+RW:** قابل بازنویسی تا ۱۰۰۰ بار
 - **[DVD-RAM:](#)** قابل بازنویسی تا ۱۰۰٬۰۰۰ بار و با [امنیت داده](#) بالا
 
 #### 3. دیسک سخت (Hard Disk)
 
-[دیسک سخت]() یک حافظه غیرفرار است که داده‌ها را روی سطح مغناطیسی صفحات سخت ذخیره می‌کند. اندازه آن معمولاً ۳.۵ اینچ برای کامپیوترهای رومیزی و ۲.۵ اینچ برای لپ‌تاپ‌ها است.
+[دیسک سخت](#) یک حافظه غیرفرار است که داده‌ها را روی سطح مغناطیسی صفحات سخت ذخیره می‌کند. اندازه آن معمولاً ۳.۵ اینچ برای کامپیوترهای رومیزی و ۲.۵ اینچ برای لپ‌تاپ‌ها است.
 
 انواع آن عبارت‌اند از:
 
 - **دیسک سخت داخلی (Internal Hard Disk):**
-داخل کیس قرار دارد و ظرفیت آن با گیگابایت یا ترابایت بیان می‌شود. سریع و مناسب ذخیره [برنامه‌ها و فایل‌های حجیم]() است.
+داخل کیس قرار دارد و ظرفیت آن با گیگابایت یا ترابایت بیان می‌شود. سریع و مناسب ذخیره [برنامه‌ها و فایل‌های حجیم](#) است.
 
 - **کارتریج‌های داخلی (Internal Cartridges):**
 برای رفع مشکل عدم جداسازی آسان دیسک داخلی معرفی شدند. ظرفیت آن‌ها بین ۲ تا ۱۶۰ گیگابایت است.
@@ -150,8 +150,8 @@ DVD مشابه CD است اما امکانات و ظرفیت بیشتری دار
 CPU به‌عنوان قلب کامپیوتر شناخته می‌شود و شامل:
 
 - واحد کنترل (Control Unit)
-- [واحد حساب و منطق (Arithmetic Logic Unit – ALU)]()
-- [واحد حافظه (Memory Unit)]()
+- [واحد حساب و منطق (Arithmetic Logic Unit – ALU)](#)
+- [واحد حافظه (Memory Unit)](#)
 
 <div className="center_images">
     ![desktop image](./images/02_computer-and-its-types/components_of_computer.jpg)
@@ -160,17 +160,17 @@ CPU به‌عنوان قلب کامپیوتر شناخته می‌شود و شا
 ورودی از طریق دستگاه‌های ورودی به حافظه ارسال می‌شود. واحد کنترل دستورها را دریافت کرده و به ALU منتقل می‌کند. ALU عملیات محاسباتی و منطقی را انجام داده و نتیجه در حافظه ذخیره شده و به دستگاه‌های خروجی ارسال می‌شود.
 
 
-#### 2. [مادربورد (Motherboard)]()
+#### 2. [مادربورد (Motherboard)](#)
 
-برد اصلی داخل کامپیوتر که تمامی اجزا به‌صورت مستقیم یا غیرمستقیم به آن متصل هستند. شامل اسلات‌های [RAM]()، کنترلرها و چیپ‌ست‌های سیستمی است.
+برد اصلی داخل کامپیوتر که تمامی اجزا به‌صورت مستقیم یا غیرمستقیم به آن متصل هستند. شامل اسلات‌های [RAM](#)، کنترلرها و چیپ‌ست‌های سیستمی است.
 
 
 #### 3. حافظه با دسترسی تصادفی (Random Access Memory – RAM)
 
 حافظه‌ای موقت و فرار که داده‌ها و برنامه‌های در حال اجرا را نگه می‌دارد. با خاموش شدن سیستم، داده‌ها پاک می‌شوند.
 
-- **[SRAM (Static RAM)]():** سریع، گران، بدون نیاز به Refresh، مانند حافظه کش
-- **[DRAM (Dynamic RAM)]():** ارزان‌تر، کندتر، نیازمند Refresh، مانند حافظه اصلی
+- **[SRAM (Static RAM)](#):** سریع، گران، بدون نیاز به Refresh، مانند حافظه کش
+- **[DRAM (Dynamic RAM)](#):** ارزان‌تر، کندتر، نیازمند Refresh، مانند حافظه اصلی
 
 
 #### 4. درگاه VGA (Video Graphics Array Port)
