chore(docs): update review questions title

--- a/docs/ceh/01_introduction_to_ethical_hacking/05_review-questions.mdx
+++ b/docs/ceh/01_introduction_to_ethical_hacking/05_review-questions.mdx
@@ -6,6 +6,6 @@ slug: review_questions
 import AssessmentQuiz from "@site/src/components/AssessmentQuiz";
 import quizData from "./exams/review_questions";
 
-# سوالات بخش اول
+# سوالات بخش هک مقدماتی
 
 <AssessmentQuiz quizData={quizData}/>
